# serializer version: 1
# name: test_entities[event.dining_room_dining_room_pico_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.dining_room_dining_room_pico_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stop',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Stop',
    'platform': 'lutron_caseta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '000004d2_111',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event.dining_room_dining_room_pico_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      'device_id': '111',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_START: 'press_start'>,
        <ButtonEventType.PRESS_END: 'press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dining Room Pico Stop',
    }),
    'context': <ANY>,
    'entity_id': 'event.dining_room_dining_room_pico_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[event.hallway_hallway_main_stairs_position_1_keypad_kitchen_pendants-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_END: 'press_end'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hallway_hallway_main_stairs_position_1_keypad_kitchen_pendants',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Kitchen Pendants',
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Kitchen Pendants',
    'platform': 'lutron_caseta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '000004d2_1372',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[event.hallway_hallway_main_stairs_position_1_keypad_kitchen_pendants-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'button',
      'device_id': '1372',
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        <ButtonEventType.PRESS_END: 'press_end'>,
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hallway Main Stairs Position 1 Keypad Kitchen Pendants',
    }),
    'context': <ANY>,
    'entity_id': 'event.hallway_hallway_main_stairs_position_1_keypad_kitchen_pendants',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
